Moving required key for vlan_translations

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -54,8 +54,8 @@ ethernet_interfaces:
       dot1q:
         ethertype: 1536
       vlan_translations:
+        required: true
         direction_in:
-          - required: true
           - from: 37
             to: 49
             inner_vlan_from: 56
