Fix(eos_cli_config_gen): Fixing the wrong CLI generated for radius-server dynamic-authorizaton

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/radius-server.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/radius-server.cfg
@@ -5,8 +5,9 @@ transceiver qsfp default-mode 4x10G
 hostname radius-server
 !
 radius-server attribute 32 include-in-access-req hostname
+radius-server dynamic-authorization port 1700
 radius-server tls ssl-profile GLOBAL_RADIUS_SSL_PROFILE
-radius-server dynamic-authorization port 1700 tls ssl-profile SSL_PROFILE
+radius-server dynamic-authorization tls ssl-profile SSL_PROFILE
 radius-server host 10.10.11.157 vrf mgt timeout 1 retransmit 1 key 7 071B245F5A
 radius-server host 10.10.11.159 vrf mgt retransmit 1 key 7 071B245F5A
 radius-server host 10.10.11.160 vrf mgt timeout 1 key 7 071B245F5A
