--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/varpv6.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/varpv6.cfg
@@ -23,6 +23,9 @@ vlan 300
 vlan 400
    name VARPv6_not_configured_2
 !
+vlan 500
+   name VARPv6_not_configured_3
+!
 vrf instance MGMT
 !
 vrf instance VRF1
@@ -41,7 +44,7 @@ interface Vlan100
    description VARPv6_configured_1
    no shutdown
    vrf VRF1
-   ipv6 address 2000:1000::2/64
+   ipv6 address 2001:db8::2/64
    ipv6 virtual-router address fe80::1
 !
 interface Vlan200
@@ -61,6 +64,12 @@ interface Vlan400
    no shutdown
    vrf VRF1
 !
+interface Vlan500
+   description VARPv6_not_configured_3
+   no shutdown
+   vrf VRF1
+   ipv6 address virtual 2001:db8::1/64
+!
 interface Vxlan1
    description varpv6_VTEP
    vxlan source-interface Loopback1
@@ -69,6 +78,7 @@ interface Vxlan1
    vxlan vlan 200 vni 10200
    vxlan vlan 300 vni 10300
    vxlan vlan 400 vni 10400
+   vxlan vlan 500 vni 10500
    vxlan vrf VRF1 vni 1
 !
 ip virtual-router mac-address 00:dc:00:00:00:0a
@@ -122,6 +132,11 @@ router bgp 101
    vlan 400
       rd 192.168.255.101:10400
       route-target both 10400:10400
+      redistribute learned
+   !
+   vlan 500
+      rd 192.168.255.101:10500
+      route-target both 10500:10500
       redistribute learned
    !
    address-family evpn
