--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -24,6 +24,7 @@ jobs:
       requirements: ${{ steps.filter.outputs.requirements }}
       docs: ${{ steps.filter.outputs.docs }}
     steps:
+      - run: echo hello
       - uses: actions/checkout@v4
       - uses: dorny/paths-filter@v3
         id: filter
