--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -763,7 +763,7 @@ interface Ethernet70
    no shutdown
    switchport
    dot1x aaa unresponsive phone action apply cached-results timeout 10 hours else traffic allow
-   dot1x aaa unresponsive action traffic allow vlan 10
+   dot1x aaa unresponsive action traffic allow vlan 10 access-list acl1
    dot1x aaa unresponsive eap response success
    dot1x mac based access-list
 !
