updated domain names

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/domain-list.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/domain-list.cfg
@@ -3,8 +3,8 @@
 transceiver qsfp default-mode 4x10G
 !
 hostname domain-list
-ip domain-list Domain1
-ip domain-list Domain2
+ip domain-list domain1.local
+ip domain-list domain2.local
 !
 no enable password
 no aaa root
