Feat(eos_cli_config_gen): Enhance DHCP server data model (lease time, reservations, raw_eos_cli)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
@@ -23,10 +23,20 @@ dhcp server
 dhcp server vrf defaulu
 !
 dhcp server vrf TEST
+   lease time ipv4 10 days 10 hours 10 minutes
    dns domain name ipv4 testv4.com
+   lease time ipv4 12 days 12 hours 12 minutes
    dns domain name ipv6 testv6.com
    !
    subnet 10.0.0.0/24
+      reservations
+         mac-address 1a1b.1c1d.1e1f
+            ipv4-address 10.0.0.1
+            hostname host1
+         !
+         mac-address 2a2b.2c2d.2e2f
+            ipv6-address ff06::c3
+            hostname host2
       !
       range 10.0.0.10 10.0.0.100
       !
