--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x-2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dot1x-2.cfg
@@ -9,5 +9,7 @@ dot1x protocol lldp bypass
 dot1x protocol bpdu bypass
 dot1x dynamic-authorization
 dot1x
+   aaa unresponsive phone action apply cached-results
+   aaa unresponsive action traffic allow
    radius av-pair service-type
    radius av-pair framed-mtu 1500
