--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ptp.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ptp.cfg
@@ -13,6 +13,7 @@ ptp domain 17
 ptp message-type general dscp 36 default
 ptp message-type event dscp 46 default
 ptp mode boundary one-step
+ptp profile g8275.1
 ptp forward-unicast
 ptp monitor threshold offset-from-master 11
 ptp monitor threshold mean-path-delay 12
@@ -39,6 +40,7 @@ interface Port-Channel5
    ptp enable
    ptp mpass
    ptp delay-mechanism e2e
+   ptp profile g8275.1 destination mac-address forwardable
    ptp sync-message interval 1
    ptp role dynamic
    ptp vlan 2
@@ -66,6 +68,7 @@ interface Ethernet6
    no switchport
    ip address 172.31.255.15/31
    ptp enable
+   ptp profile g8275.1 destination mac-address non-forwardable
    ptp sync-message interval 1
    ptp delay-mechanism e2e
    ptp announce interval 3
