Added test in molecule for ip-virtual-router-mac-address

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -56,6 +56,7 @@ ip-routing-fib
 ip-radius-source-interface
 ip-tacacs-source-interface
 ip-client-source-interfaces
+ip-virtual-router-mac-address
 ipv6-access-lists
 ipv6-dhcp-relay
 ipv6-neighbors
