--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -20,6 +20,7 @@ interface Ethernet1
    switchport phone vlan 110
    switchport phone trunk tagged
    switchport vlan translation in required
+   switchport dot1q vlan tag required
    switchport trunk allowed vlan 10-11
    switchport mode dot1q-tunnel
    switchport dot1q ethertype 1536
@@ -29,6 +30,7 @@ interface Ethernet1
    switchport source-interface tx
    switchport vlan translation 12 20
    switchport vlan translation 24 inner 78 network 46
+   switchport vlan translation 24 inner 78 46
    switchport vlan translation 43 dot1q-tunnel 30
    switchport vlan translation in 10 24
    switchport vlan translation in 37 inner 56 49
@@ -36,7 +38,6 @@ interface Ethernet1
    switchport vlan translation out 34 50
    switchport vlan translation out 10 45 inner 34
    switchport vlan translation out 45 dot1q-tunnel all
-   switchport vlan translation out 23 dot1q-tunnel 22
    switchport trunk private-vlan secondary
    switchport pvlan mapping 20-30
    ip address 172.31.255.1/31
@@ -63,6 +64,7 @@ interface Ethernet1
    ip igmp host-proxy version 2
    tcp mss ceiling ipv4 70 ipv6 75 egress
    switchport port-security
+   switchport port-security mac-address maximum disabled
    priority-flow-control on
    priority-flow-control priority 5 drop
    link tracking group EVPN_MH_ES1 upstream
@@ -76,6 +78,10 @@ interface Ethernet2
    switchport trunk allowed vlan 110-111,210-211
    switchport mode trunk
    switchport
+   no switchport trunk private-vlan secondary
+   switchport vlan translation in required
+   switchport dot1q vlan tag disallowed
+   no switchport
    tcp mss ceiling ipv4 70 ingress
    multicast ipv4 boundary ACL_MULTICAST
    multicast ipv6 boundary ACL_V6_MULTICAST out
@@ -94,6 +100,8 @@ interface Ethernet3
    description P2P_LINK_TO_DC1-SPINE2_Ethernet2
    mtu 1500
    no switchport
+   switchport trunk native vlan 5
+   switchport vlan translation out 23 dot1q-tunnel 50
    no snmp trap link-change
    ip address 172.31.128.1/31
    ipv6 enable
@@ -131,6 +139,7 @@ interface Ethernet4
    multicast ipv6 boundary ff00::/16 out
    multicast ipv6 boundary ff01::/16 out
    multicast ipv4 static
+   switchport port-security violation protect
    priority-flow-control on
    spanning-tree guard none
 !
@@ -271,7 +280,10 @@ interface Ethernet15
 !
 interface Ethernet16
    description PVLAN Promiscuous Trunk - vlan translation out
+   switchport vlan translation 120 130
+   switchport vlan translation in 113 115
    switchport vlan translation out 111-112 110
+   switchport vlan translation 12 20
    switchport trunk allowed vlan 110-112
    switchport mode trunk
    switchport
