--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -109,6 +109,7 @@ interface Port-Channel15
    switchport
    switchport trunk allowed vlan 110,201
    switchport mode trunk
+   no switchport trunk private-vlan secondary
    mlag 15
    spanning-tree guard loop
    link tracking group EVPN_MH_ES2 upstream
@@ -173,11 +174,13 @@ interface Port-Channel100
    switchport dot1q vlan tag required
    switchport trunk allowed vlan 10-11
    switchport mode dot1q-tunnel
+   switchport dot1q ethertype 1536
    switchport vlan forwarding accept all
    switchport trunk group g1
    switchport trunk group g2
    switchport source-interface tx multicast
    switchport vlan translation 12 20
+   switchport vlan translation 23 inner 74 42
    switchport vlan translation 24 inner 78 network 46
    switchport vlan translation 43 dot1q-tunnel 30
    switchport vlan translation in 34 23
@@ -186,7 +189,6 @@ interface Port-Channel100
    switchport vlan translation out 34 50
    switchport vlan translation out 10 45 inner 34
    switchport vlan translation out 45 dot1q-tunnel all
-   switchport vlan translation out 23 dot1q-tunnel 22
    switchport trunk private-vlan secondary
    switchport pvlan mapping 20-30
    switchport backup-link Ethernet5
@@ -201,6 +203,10 @@ interface Port-Channel100.101
    logging event link-status
    mtu 1500
    encapsulation dot1q vlan 101
+   switchport trunk native vlan 10
+   switchport dot1q vlan tag disallowed
+   no switchport
+   switchport vlan translation out 23 dot1q-tunnel 22
    ip address 10.1.1.3/31
 !
 interface Port-Channel100.102
@@ -224,7 +230,10 @@ interface Port-Channel102
    switchport
    switchport trunk allowed vlan 110-112
    switchport mode trunk
+   switchport vlan translation 120 130
+   switchport vlan translation in 113 115
    switchport vlan translation out 111-112 110
+   switchport vlan translation 12 20
 !
 interface Port-Channel103
    description PVLAN Secondary Trunk
