--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -62,7 +62,6 @@ ethernet_interfaces:
           dest: 01:00:00:00:00:00
           src: 01:23:45:67:89:ab
         encapsulation:
-          vxlan_strip: true
           gre:
             - strip: true
             - strip: true
@@ -74,6 +73,10 @@ ethernet_interfaces:
             - strip: true
               destination: 2.1.1.2
               protocol: "0x0010"
+            - strip: false
+            - strip: true
+              destination: 2.1.1.3
+              source: 2.1.1.4
       tool:
         mpls_pop_all: true
         encapsulation:
@@ -232,6 +235,23 @@ ethernet_interfaces:
         boundaries:
           - boundary: ff00::/16
           - boundary: ff01::/16
+    switchport:
+      tap:
+        identity:
+          port_id: 5
+        mac_address:
+          dest: 01:00:00:00:00:00
+        encapsulation:
+          vxlan_strip: true
+        truncation:
+          enabled: true
+      tool:
+        identity:
+          tag: dot1q
+          qinq_dzgre_source: policy inner port
+        truncation:
+          enabled: true
+          size: 160
 
   - name: Ethernet5
     description: Molecule Routing
