--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -149,6 +149,10 @@ port_channel_interfaces:
             - strip: true
               destination: 2.1.1.2
               protocol: "0x0001"
+            - strip: false
+            - strip: true
+              destination: 1.1.1.3
+              source: 1.1.1.4
       tool:
         mpls_pop_all: true
         encapsulation:
@@ -177,6 +181,24 @@ port_channel_interfaces:
     mtu: 1500
     ip_address: 10.1.1.3/31
     encapsulation_dot1q_vlan: 101
+    switchport:
+      tap:
+        identity:
+          port_id: 3
+          inner_port_id: 10
+        mac_address:
+          dest: 01:00:00:00:00:00
+        encapsulation:
+          vxlan_strip: true
+        truncation:
+          enabled: true
+          size: 120
+      tool:
+        truncation:
+          enabled: true
+        identity:
+          tag: dot1q
+          dot1q_dzgre_source: policy
 
   - name: Port-Channel100.102
     type: l3dot1q
