--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/port-channel-interfaces.yml
@@ -169,6 +169,7 @@ port_channel_interfaces:
           - from: 45
             dot1q_tunnel:
               all: true
+          - from: 55
       vlan_forwarding_accept_all: true
       backup_link:
         interface: Ethernet5
@@ -321,6 +322,7 @@ port_channel_interfaces:
       - direction: both
         from: 120
         to: 130
+      - direction: in
 
   - name: Port-Channel103
     description: PVLAN Secondary Trunk
