--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-session-default.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/monitor-session-default.cfg
@@ -2,7 +2,7 @@
 !
 transceiver qsfp default-mode 4x10G
 !
-hostname monitor-sessions-default
+hostname monitor-session-default
 !
 no enable password
 no aaa root
@@ -11,5 +11,7 @@ interface Management1
    description oob_management
    vrf MGMT
    ip address 10.73.255.122/24
+!
+monitor session default encapsulation gre payload inner-packet
 !
 end
