fixing file names in hosts.ini

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -97,7 +97,7 @@ mlag-configuration
 monitor-layer1
 monitor-connectivity
 monitor-sessions
-monitor-session-default
+monitor-session-default-encapsulation-gre
 monitor-telemetry-influx
 monitor-telemetry-postcard-policy
 mpls
