--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
@@ -25,18 +25,18 @@ dhcp server vrf defaulu
 dhcp server vrf TEST
    lease time ipv4 10 days 10 hours 10 minutes
    dns domain name ipv4 testv4.com
-   lease time ipv4 12 days 12 hours 12 minutes
+   lease time ipv6 12 days 12 hours 12 minutes
    dns domain name ipv6 testv6.com
    !
    subnet 10.0.0.0/24
       reservations
+         mac-address 0001.0001.0001
+            ipv4-address 10.0.0.2
+            hostname host3
+         !
          mac-address 1a1b.1c1d.1e1f
             ipv4-address 10.0.0.1
             hostname host1
-         !
-         mac-address 2a2b.2c2d.2e2f
-            ipv6-address ff06::c3
-            hostname host2
       !
       range 10.0.0.10 10.0.0.100
       !
@@ -45,6 +45,11 @@ dhcp server vrf TEST
       dns server 10.1.1.12 10.1.1.13
       lease time 0 days 0 hours 10 minutes
       default-gateway 10.0.0.1
+   !
+   subnet 2001:db8:abcd:1234:c000::/66
+      reservations
+         mac-address 0003.0003.003
+            ipv6-address 2001:db8:abcd:1234:c000::1
    !
    vendor-option ipv4 NTP
       sub-option 1 type string data "test"
