--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/port-channel-interfaces.cfg
@@ -191,7 +191,7 @@ interface Port-Channel100
    switchport vlan translation out 45 dot1q-tunnel all
    switchport trunk private-vlan secondary
    switchport pvlan mapping 20-30
-   switchport backup-link Ethernet5
+   switchport backup-link Port-channel51
    switchport backup preemption-delay 35
    switchport backup mac-move-burst 20
    switchport backup mac-move-burst-interval 30
@@ -208,6 +208,7 @@ interface Port-Channel100.101
    no switchport
    switchport vlan translation out 23 dot1q-tunnel 22
    ip address 10.1.1.3/31
+   switchport backup-link Port-Channel100.102 prefer vlan 20
 !
 interface Port-Channel100.102
    description IFL for TENANT02
