--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -176,6 +176,9 @@ ethernet_interfaces:
           protect_log: true
       vlan_translations:
         required: true
+      backup_link:
+        prefer_vlan: 20
+
 
   - name: Ethernet3
     peer: DC1-SPINE2
@@ -225,6 +228,8 @@ ethernet_interfaces:
           - from: 23
             dot1q_tunnel:
               to: 50
+      backup_link:
+        interface: Ethernet4
 
   - name: Ethernet4
     type: routed
