Feat(eos_cli_config_gen): Add MPLS Tunnel Support for Traceroute and PMTU Discovery (#4219)
Co-authored-by: Guillaume Mulocher <gmulocher@arista.com>
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mpls.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/mpls.yml
@@ -5,6 +5,8 @@ mpls:
     router_id: 192.168.1.1
     shutdown: false
     transport_address_interface: Loopback0
+  icmp:
+    fragmentation_needed_tunneling: true
 
 ethernet_interfaces:
   - name: Ethernet1
