--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -99,6 +99,8 @@ monitor-sessions
 monitor-telemetry-influx
 monitor-telemetry-postcard-policy
 mpls
+mpls-2
+mpls-3
 none_configuration
 ntp
 object-tracking
