Feat(cv_deploy): Add CV Pathfinder AVT hop count to metadata studio (#4071)
Co-authored-by: gmuloc <gmulocher@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-custom-control-plane-policy-pathfinder-1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-custom-control-plane-policy-pathfinder-1.yml
@@ -534,6 +534,7 @@ metadata:
       avts:
       - constraints:
           jitter: 5
+          hop_count: lowest
         id: 254
         name: CUSTOM-CP-POLICY
         pathgroups:
