--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/application-traffic-recognition.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/application-traffic-recognition.cfg
@@ -25,6 +25,7 @@ application traffic recognition
       protocol tcp source port field-set src_port_set1 destination port field-set dest_port_set1
       protocol udp source port field-set src_port_set2 destination port field-set dest_port_set2
       protocol 25
+      dscp 12-19, af41, af43
    !
    application ipv4 user_defined_app2
       source prefix field-set src_prefix_set2
@@ -33,6 +34,7 @@ application traffic recognition
       protocol pim
       protocol tcp
       protocol 7-11, 21
+      dscp 1-42, cs1, ef
    !
    application l4 l4-app-1
       protocol tcp source port field-set src_port_set1 destination port field-set dest_port_set1
