--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -610,6 +610,7 @@ application_classification:
       applications:
         # Testing applications in categories filtering
         - name: CUSTOM-APPLICATION-2
+        - name: CUSTOM-DSCP-APPLICATION
         # Builtin application that should not raise
         - name: microsoft-teams
   applications:
@@ -629,6 +630,12 @@ application_classification:
         protocols: [udp]
         udp_src_port_set_name: UDP-SRC-VOICE
         udp_dest_port_set_name: UDP-DEST-VOICE
+      - name: CUSTOM-DSCP-APPLICATION
+        dscp_ranges:
+          - ef
+          - 12-14
+          - cs6
+          - 42
   field_sets:
     ipv4_prefixes:
       # This should not be rendered in any device
