--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-custom-control-plane-policy-edge-2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-custom-control-plane-policy-edge-2.cfg
@@ -174,8 +174,12 @@ application traffic recognition
    application ipv4 CUSTOM-APPLICATION-2
       protocol tcp source port field-set TCP-SRC-2 destination port field-set TCP-DEST-2
    !
+   application ipv4 CUSTOM-DSCP-APPLICATION
+      dscp 12-14, 42, cs6, ef
+   !
    category VIDEO1
       application CUSTOM-APPLICATION-2
+      application CUSTOM-DSCP-APPLICATION
       application microsoft-teams
    !
    application-profile CUSTOM-CP-APP-PROFILE
