--- a/.gitignore
+++ b/.gitignore
@@ -8,14 +8,16 @@ __pycache__/
 *.pickle
 
 # pyavd ignores
-python-avd/build/
-python-avd/dist/
-python-avd/vendor/
-python-avd/tests/pyavd/artifacts/
-python-avd/pyavd.egg-info/
-python-avd/.tox/
-python-avd/.coverage
-python-avd/.mypy_cache/
+/python-avd/build/
+/python-avd/dist/
+/python-avd/vendor/
+/python-avd/tests/pyavd/artifacts/
+/python-avd/pyavd.egg-info/
+/python-avd/.tox/
+/python-avd/.coverage
+/python-avd/.mypy_cache/
+# Ignore cloned cloudvision-python repo created during generation of _cv/api
+/python-avd/pyavd/_cv/cloudvision-apis/
 
 # top level installers
 /*.tar.gz
@@ -29,9 +31,6 @@ python-avd/.mypy_cache/
 
 # ansible_collections/arista/avd/tests ignores
 ansible_collections/arista/avd/tests/.mypy_cache/
-
-# Ignore cloned cloudvision-python repo created during generation of cv_client/api
-ansible_collections/arista/avd/plugins/plugin_utils/cv_client/cloudvision-apis/
 
 # Development
 ## pyenv
