issue-4244: Deprecated the uppercase latter of vxlan_interface

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/intended/configs/host2.cfg
@@ -12,6 +12,11 @@ spanning-tree vlan-id 100-500 priority 16384
 no enable password
 no aaa root
 !
+interface Vxlan1
+   no vxlan qos dscp propagation encapsulation
+   no vxlan qos ecn propagation
+   no vxlan qos map dscp to traffic-class decapsulation
+!
 router bgp 65101
    router-id 192.168.255.3
    redistribute connected
