--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/vxlan-interface.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/inventory/host_vars/host1/vxlan-interface.yml
@@ -1,6 +1,8 @@
 ### VxLAN interface ###
 
 vxlan_interface:
+  # Testing Vxlan1 as key
+  # Vxlan1 key is deprecated in 4.10.0. To be removed in 5.0.0
   Vxlan1:
     vxlan:
       # Testing vlans as dict of dict
