--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vxlan-interface.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/vxlan-interface.yml
@@ -1,7 +1,7 @@
 ### VxLAN interface ###
 
 vxlan_interface:
-  Vxlan1:
+  vxlan1:
     description: DC1-LEAF2A_VTEP
     vxlan:
       source_interface: Loopback0
