Adding eos_cli and tests

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/dhcp-servers.cfg
@@ -4,6 +4,8 @@ dhcp server vrf AVRF
    !
    subnet 172.16.254.0/24
       default-gateway 172.16.254.1
+   dns server ipv4 10.0.0.1 192.168.255.254
+   client class ipv4 definition Class1
 !
 dhcp server vrf defauls
 !
