Feat(eos_cli_config_gen): Add support for isis authentication on vlan interfaces

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/vlan-interfaces.cfg
@@ -236,6 +236,20 @@ interface Vlan339
    ipv6 address 2001:db8:339::1/64
    ipv6 nd other-config-flag
 !
+interface Vlan340
+   description isis authentication text
+   isis authentication mode text
+   isis authentication key 7 asfddja23452
+!
+interface Vlan341
+   description isis authentication sha
+   isis authentication mode sha key-id 1000 rx-disabled
+!
+interface Vlan342
+   description isis authentication shared-secret
+   isis authentication mode shared-secretprofile profile1 algorithm sha-1 rx-disabled level-1
+   isis authentication mode shared-secretprofile profile1 algorithm sha-1 rx-disabled level-1 profile profile1 algorithm md5 rx-disabled level-2
+!
 interface Vlan501
    description SVI Description
    no shutdown
