Refactor(eos_cli_config_gen): No sorting and regex

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder.cfg
@@ -289,7 +289,7 @@ application traffic recognition
       protocol tcp source port field-set TCP-SRC-2 destination port field-set TCP-DEST-2
    !
    application ipv4 CUSTOM-DSCP-APPLICATION
-      dscp 12-14, 42, cs6, ef
+      dscp ef 12-14 cs6 42
    !
    category VIDEO1
       application CUSTOM-APPLICATION-2
