--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/application-traffic-recognition.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/application-traffic-recognition.cfg
@@ -25,7 +25,7 @@ application traffic recognition
       protocol tcp source port field-set src_port_set1 destination port field-set dest_port_set1
       protocol udp source port field-set src_port_set2 destination port field-set dest_port_set2
       protocol 25
-      dscp 12-19, af41, af43
+      dscp 12-19 af43 af41 ef 1-4,6 32-33,34-35 11 56-57, 58 59-60, 61-62
    !
    application ipv4 user_defined_app2
       source prefix field-set src_prefix_set2
@@ -34,7 +34,7 @@ application traffic recognition
       protocol pim
       protocol tcp
       protocol 7-11, 21
-      dscp 1-42, cs1, ef
+      dscp ef 1-42 cs1
    !
    application l4 l4-app-1
       protocol tcp source port field-set src_port_set1 destination port field-set dest_port_set1
