Test: Make pyavd tests happy

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/application-traffic-recognition.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/application-traffic-recognition.yml
@@ -100,7 +100,8 @@ application_traffic_recognition:
           - ef
           - 1-4,6
           - 32-33,34-35
-          - 11
+          # Needs to be a string for pyavd test to pass
+          - "11"
           - 56-57, 58
           - 59-60, 61-62
     l4_applications:
