--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/sync-e.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/sync-e.cfg
@@ -15,15 +15,21 @@ interface Ethernet3
    switchport trunk allowed vlan 2,14
    switchport mode trunk
    switchport
+   sync-e
+      priority 10
 !
 interface Ethernet5
    description DC1-AGG01_Ethernet1
+   sync-e
+      priority 127
 !
 interface Ethernet6
    description P2P_LINK_TO_DC1-SPINE1_Ethernet6
    mtu 1500
    no switchport
    ip address 172.31.255.15/31
+   sync-e
+      priority disabled
 !
 interface Management1
    description oob_management
