Address review comments and add port-security for port-channel interface

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/ethernet-interfaces.yml
@@ -299,6 +299,8 @@ ethernet_interfaces:
     isis_authentication_mode: md5
     isis_authentication_key: "asfddja23452"
     spanning_tree_guard: loop
+    switchport:
+      access_vlan: 220
 
   - name: Ethernet6
     type: switched
