--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/ethernet-interfaces.cfg
@@ -149,6 +149,7 @@ interface Ethernet5
    no shutdown
    mtu 9100
    no switchport
+   switchport access vlan 220
    ip ospf cost 99
    ip ospf network point-to-point
    ip ospf authentication message-digest
