Test: Make sure this tag issue does not happen again

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/converge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/converge.yml
@@ -9,3 +9,6 @@
       delegate_to: 127.0.0.1
       ansible.builtin.import_role:
         name: arista.avd.eos_cli_config_gen
+      # Adding a test for #4232
+      tags:
+        - test
