--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/molecule.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/molecule.yml
@@ -25,11 +25,13 @@ provisioner:
     defaults:
       jinja2_extensions: 'jinja2.ext.loopcontrols,jinja2.ext.do,jinja2.ext.i18n'
       gathering: explicit
-
   inventory:
     links:
       hosts: 'inventory/hosts.ini'
       host_vars: 'inventory/host_vars/'
       group_vars: 'inventory/group_vars/'
+  ansible_args:
+    # Testing import role with tag
+    - --tags=test
 verifier:
   name: ansible
