Test(eos_cli_config_gen): Add tests for terminal template to improve coverage

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/hosts.ini
@@ -173,6 +173,7 @@ tcam-profile
 static-routes
 system
 tap-aggregation
+terminal
 terminattr-cloud
 terminattr-extra-flags
 terminattr-multi-cluster-certs
