Refactor: Add TODOs for 5.0.0 and fix molecule

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/converge.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/converge.yml
@@ -9,6 +9,6 @@
       delegate_to: 127.0.0.1
       ansible.builtin.import_role:
         name: arista.avd.eos_cli_config_gen
+      # TODO: AVD 5.0.0
       # Adding a test for #4232
-      tags:
-        - test
+      tags: [test]
