--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/create.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/create.yml
@@ -9,4 +9,5 @@
       ansible.builtin.import_role:
         name: arista.avd.build_output_folders
       run_once: true
+      # TODO: AVD 5.0.0
       tags: [test]
