--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/molecule.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen_deprecated_vars/molecule.yml
@@ -31,6 +31,7 @@ provisioner:
       host_vars: 'inventory/host_vars/'
       group_vars: 'inventory/group_vars/'
   ansible_args:
+    # TODO: AVD 5.0.0
     # Testing import role with tag
     - --tags=test
 verifier:
